src/styles/global.css
@import "tailwindcss";
@config "../../tailwind.config.cjs";

header {
  a[target="_blank"] {
    &::after {
      @apply inline-block w-3 h-3 ml-1 relative;
      content: "";
      top: 1px;
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E");
    }
  }
}

footer {
  ul a[target="_blank"] {
    &::after {
      content: "";
      @apply inline-block w-3 h-3 ml-1 relative opacity-25 top-px;
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E");
    }
  }
}

@media (prefers-color-scheme: dark) {
  header {
    a[target="_blank"] {
      &::after {
        filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg)
          brightness(119%) contrast(119%);
      }
    }
  }

  footer {
    ul a[target="_blank"] {
      &::after {
        opacity: 1;
        filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg)
          brightness(119%) contrast(119%);
      }
    }
  }
}

/* Alt text styling for a not-yet-loaded image */
img {
  @apply font-mono text-sm text-gray-500;
}

.footnotes {
  @apply border-t mt-24 pt-4 text-base;
}

.video-container {
  @apply relative overflow-hidden w-full;

  &::after {
    @apply block;
    content: "";
    padding-top: 56.25%;
  }

  iframe {
    @apply absolute top-0 left-0 w-full h-full;
  }
}

/* DarkMode for mark*/
mark {
  @apply dark:bg-[blue];
}

.menu {
  @apply hidden absolute top-0 right-0 max-w-full bg-white px-8 py-4 z-30 text-center shadow-2xl rounded-lg m-3 dark:bg-slate-800 dark:text-white;

  &.open {
    @apply block;
  }
}

input[type="radio"]:checked + label {
  @apply font-bold border-blue-300 shadow border;
}

.terminal-wrapper {
  @apply rounded-lg;
  background: #2e3440;
  img {
    margin-top: 0px;
    margin-bottom: 0px;
  }
  pre {
    @apply font-normal overflow-x-auto font-mono bg-transparent rounded-t-none;

    code {
      color: #d8dee9;
      .prompt {
        @apply select-none text-slate-400;
      }
    }
  }
}

.terminal-wrapper .top-bar {
  &.powershell {
    @apply justify-between text-white;
    background: #1f2023;
  }
  &.powershell-ubuntu {
    @apply justify-between text-white;
    background: #1f2023;
  }
  &.ubuntu {
    @apply justify-end;
  }
}

.prose .terminal-wrapper pre {
  @apply my-0;
}

.tab-area {
  @apply -mx-4 mb-6 mt-6;
  max-width: 41.5rem;
}

.tabs {
  @apply ml-1;
}

.tab {
  @apply px-3 py-1 leading-none font-mono font-bold text-sm text-gray-500 hover:text-black;

  span {
    @apply border-dotted border-b border-gray-400;
  }

  &.active {
    @apply text-black dark:text-gray-300;

    span {
      @apply border-solid border-black dark:border-gray-300;
    }
  }
}

.panel {
  @apply hidden px-4 rounded-lg shadow-xl dark:bg-transparent dark:shadow-slate-900/50;

  &.active {
    @apply block;
  }
}

